--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= favicon_link_tag 'favicon.png' %>
+
+    <link href="https://fonts.googleapis.com/css?family=Spectral+SC:600,700" rel="stylesheet">
   </head>
 
   <body>
