--- a/app/assets/stylesheets/randomizer.scss
+++ b/app/assets/stylesheets/randomizer.scss
@@ -4,18 +4,18 @@
   font-family: 'Spectral SC', serif;
 }
 
+h1 {
+  font-size: 20px;
+}
+
 .randomizer-container > div {
   border-bottom: 5px solid gray;
-  margin-top: 30px;
+  margin: 30px 10px 0 10px;
 }
 
 .randomizer-main-button-container {
   text-align: center;
   margin-bottom: 50px;
-}
-
-.randomizer-main-button-container > button:last-child {
-  margin-left: 100px;
 }
 
 .randomizer-container > div:last-child, .randomizer-container > div:first-child {
@@ -35,42 +35,60 @@
   background: linear-gradient(red, #8B0000);
 }
 
+.randomizer-mages-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.randomizer-mage-container {
+  min-width: 850px;
+  max-width: 850px;
+}
 
 .randomizer-section-options {
   display: flex;
   align-items: center;
-}
-
-.randomizer-section-options > article {
-  font-size: 14px;
-  width: 160px;
-  text-align: end;
-}
-
-h2 {
-  width: 350px;
-  font-size: 20px;
-}
-
-.randomizer-section-options > * {
   margin: 10px 10px 0 10px;
 }
 
-.randomizer-section-options > select {
+.randomizer-section-options > article {
+  font-size: 12px;
+  width: 100px;
+  text-align: end;
+  margin-right: 10px;
+}
+
+h2 {
+  min-width: 245px;
+  max-width: 245px;
+  font-size: 15px;
+  margin: 0 20px 0 0;
+  text-align: center;
+}
+
+.randomizer-select {
   font-size: 12px;
   font-weight: 700;
   font-family: 'Spectral SC', serif;
-  height: 30px;
-  width: 170px;
+  height: 23px;
+  min-width: 170px;
+}
+
+.randomizer-select-players {
+  font-size: 12px;
+  font-weight: 700;
+  font-family: 'Spectral SC', serif;
+  height: 23px;
+  min-width: 100px;
+  margin-right: 10px;
 }
 
 .randomizer-button {
   font-size: 12px;
   font-weight: 700;
   font-family: 'Spectral SC', serif;
-  height: 30px;
-  width: 120px;
-  padding: 5px;
+  height: 25px;
   border-radius: 7px;
   cursor: pointer;
   background: linear-gradient(yellow, red);
@@ -82,39 +100,84 @@ h2 {
 }
 
 .randomizer-selected-detail > img {
-  height: 200px;
-  width: 327.27px;
+  height: 150px;
+  min-width: 245.45px;
 }
 
 .randomizer-selected-detail-info {
   display: flex;
-  flex-direction: column;
-  margin: 10px 43px;
-  font-size: 16px;
+  margin: 10px 10px 0 20px;
+  font-size: 12px;
 }
 
 .randomizer-selected-detail-info > ul {
-  margin-bottom: 20px;
+  flex: 1;
+  margin-bottom: 10px;
+}
+
+.randomizer-selected-detail-info > article {
+  flex: 2;
+  margin-left: 10px;
 }
 
 .randomizer-selected-detail-info > ul > li {
   padding: 0 10px;
 }
 
+.randomizer-mage-ability {
+  margin-left: 10px;
+}
+
 h3 {
   width: 100px;
+}
+
+.randomizer-market-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px 0 30px 0;
 }
 
 .randomizer-market-card-type {
   display: flex;
   align-items: center;
-  margin: 40px 0 0 10px;
-}
-
-.randomizer-market-card-type:first-child {
   margin-top: 20px;
 }
 
-.randomizer-market-card-type > img:first-child {
-  margin-left: 0;
+.randomizer-card-image {
+  height: 200px;
+  margin: 0 10px;
+}
+
+.randomizer-game-data {
+  margin: 0 10px 30px 10px;
+}
+
+.randomizer-game-data > section {
+  margin: 0 0 20px 10px;
+}
+
+.randomizer-game-data > section > label {
+  margin-right: 15px;
+  font-size: 15px;
+}
+
+.randomizer-game-data > textarea {
+  font-family: 'Spectral SC', serif;
+  font-size: 12px;
+  font-weight: 700;
+  min-width: 600px;
+  width: auto;
+  margin: 0 0 30px 10px;
+}
+
+.randomizer-checkbox {
+  transform: scale(1.3);
+}
+
+.randomizer-select-difficulty {
+  font-family: 'Spectral SC', serif;
+  font-size: 12px;
+  font-weight: 700;
+  min-width: 50px;
 }
