--- a/app/assets/stylesheets/players.scss
+++ b/app/assets/stylesheets/players.scss
@@ -1,8 +1,3 @@
-// Place all the styles related to the Cards controller here.
+// Place all the styles related to the players controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.card-image {
-  height: 250px;
-  margin: 0 20px;
-}
