--- a/app/assets/stylesheets/nemeses.scss
+++ b/app/assets/stylesheets/nemeses.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Nemeses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.nemesis-image {
+  margin: 0 20px;
+}
