Update CSS styling to each card so they are aligned with each other vertically and horizontally.

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -34,6 +34,8 @@ main > img {
   font-weight: bold;
   margin: 20px 0;
   text-align: center;
+  width: 219px;
+  height: 153px;
 }
 
 .page-list > section > li {
