--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -2,7 +2,36 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.card-container {
+  display: flex;
+  font-weight: bold;
+  margin: 20px;
+  text-align: center;
+  border: 1px solid black;
+  box-shadow: 5px 5px 2px #888888;
+}
+
+.card-container > section {
+  min-width: 150px;
+  max-width: 150px;
+  font-size: 12px;
+  margin: 15px;
+}
+
+.card-container > section > li {
+  height: 178px;
+}
+
+.card-container > section > article {
+  font-size: 14px;
+}
+
+.card-name {
+  font-size: 17px;
+  margin-bottom: 30px;
+}
+
 .card-image {
   height: 250px;
-  margin: 0 20px;
+  // margin: 0 20px;
 }
