--- a/app/assets/stylesheets/mages.scss
+++ b/app/assets/stylesheets/mages.scss
@@ -4,7 +4,6 @@
 
 .mage-image {
   max-width: 400px;
-  margin: 0 20px;
 }
 
 .mage-info {
@@ -13,4 +12,10 @@
 
 .mage-info > section {
   margin-top: 10px;
+}
+
+.mage-ability {
+  font-size: 12px;
+  margin: 0 20px;
+  height: 115px;
 }
