Add a delete button to the game history table.

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -25,3 +25,13 @@ td {
   padding: 5px;
   text-align: left;
 }
+
+.delete-game-button {
+  font-size: 12px;
+  font-weight: 700;
+  font-family: 'Spectral SC', serif;
+  height: 25px;
+  border-radius: 7px;
+  cursor: pointer;
+  background: linear-gradient(yellow, red);
+}
