--- a/app/assets/stylesheets/mages.scss
+++ b/app/assets/stylesheets/mages.scss
@@ -10,13 +10,10 @@
   min-height: 200px;
 }
 
-.mage-info > section {
-  margin-top: 10px;
-}
-
 .mage-ability {
   white-space: pre-line;
   font-size: 12px;
-  margin: 0 20px;
-  height: 115px;
+  margin: 15px 20px 25px 15px;
+  height: 145px;
+  line-height: 16px;
 }
