--- a/app/assets/stylesheets/randomizer.scss
+++ b/app/assets/stylesheets/randomizer.scss
@@ -6,20 +6,21 @@
 
 h1 {
   font-size: 20px;
+  text-align: center;
+  background-color: #6e8091;
+  color: white;
+  padding-top: 5px;
+  border-bottom: 5px solid black;
+  border-radius: 5px;
 }
 
 .randomizer-container > div {
-  border-bottom: 5px solid gray;
   margin: 30px 10px 0 10px;
 }
 
 .randomizer-main-button-container {
   text-align: center;
   margin-bottom: 30px;
-}
-
-.randomizer-container > div:last-child, .randomizer-container > div:first-child {
-  border-bottom: none;
 }
 
 .randomizer-main-button {
@@ -35,10 +36,19 @@ h1 {
   background: linear-gradient(red, #8B0000);
 }
 
+.randomizer-section-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .randomizer-mages-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .randomizer-mage-container {
@@ -49,21 +59,22 @@ h1 {
 .randomizer-section-options {
   display: flex;
   align-items: center;
-  margin: 10px 10px 0 10px;
+  margin: 20px 10px 0 10px;
+  min-width: 681.88px;
 }
 
 .randomizer-section-options > article {
   font-size: 12px;
   width: 100px;
   text-align: end;
-  margin-right: 10px;
+  margin-right: 8px;
 }
 
 h2 {
-  min-width: 245px;
-  max-width: 245px;
-  font-size: 15px;
-  margin: 0 20px 0 0;
+  min-width: 295px;
+  max-width: 295px;
+  font-size: 18px;
+  margin: 2px 15px 2px 0;
   text-align: center;
 }
 
@@ -81,7 +92,6 @@ h2 {
   font-family: 'Spectral SC', serif;
   height: 23px;
   min-width: 100px;
-  margin-right: 10px;
 }
 
 .randomizer-button {
@@ -94,52 +104,73 @@ h2 {
   background: linear-gradient(yellow, red);
 }
 
-.randomizer-selected-detail {
+.randomizer-character {
   display: flex;
-  margin: 10px 10px 40px 10px;
+  min-width: 676.89px;
+  margin: 10px;
 }
 
-.randomizer-selected-detail > img {
-  height: 150px;
-  min-width: 245.45px;
+.randomizer-character > img {
+  height: 179px;
+  width: 293.02px;
 }
 
-.randomizer-selected-detail-info {
+.randomizer-character-info {
   display: flex;
-  margin: 10px 10px 0 20px;
+  margin: 10px 20px;
   font-size: 12px;
 }
 
-.randomizer-selected-detail-info > ul {
-  flex: 1;
+.randomizer-character-info > ul {
   margin-bottom: 10px;
+  width: 170px;
 }
 
-.randomizer-selected-detail-info > article {
-  flex: 2;
+.randomizer-character-info > article {
   margin-left: 10px;
+  width: 335px;
 }
 
-.randomizer-selected-detail-info > ul > li {
+.randomizer-character-info > ul > li {
   padding: 0 10px;
 }
 
+.randomizer-character-info > ul > li:first-child {
+  margin-top: 5px;
+}
+
 .randomizer-mage-ability {
-  margin-left: 10px;
+  margin: 5px 0 0 10px;
   white-space: pre-line;
+  line-height: 15px;
 }
 
 h3 {
   width: 100px;
 }
 
-.randomizer-market-cards-container {
+.randomizer-cards-container {
   display: flex;
   flex-wrap: wrap;
-  margin: 10px 0 30px 0;
+  justify-content: center;
+  margin: 10px 0;
 }
 
-.randomizer-market-card-type {
+.randomizer-card-heading {
+  font-size: 18px;
+  margin-right: 50px;
+  padding-top: 1px;
+  text-align: center;
+}
+
+.randomizer-section-card-options {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0 10px 0;
+}
+
+.randomizer-card-type {
   display: flex;
   align-items: center;
   margin-top: 20px;
@@ -154,26 +185,32 @@ h3 {
   margin: 0 10px 30px 10px;
 }
 
-.randomizer-game-data > section {
-  margin: 0 0 20px 10px;
+.randomizer-game-options {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.randomizer-game-data > section > label {
+.randomizer-game-options > section {
+  margin: 20px 0 0 10px;
+}
+
+.randomizer-game-options > section > label {
   margin-right: 15px;
   font-size: 15px;
 }
 
-.randomizer-game-data > textarea {
+.randomizer-game-options > textarea {
   font-family: 'Spectral SC', serif;
   font-size: 12px;
   font-weight: 700;
   min-width: 600px;
   width: auto;
-  margin: 0 0 30px 10px;
+  margin: 30px 0;
 }
 
 .randomizer-checkbox {
-  transform: scale(1.3);
+  transform: scale(1.05);
 }
 
 .randomizer-select-difficulty {
