--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -18,7 +18,8 @@ th {
   font-size: 14px;
   padding: 5px;
   text-align: center;
-  background-color: lightgray;
+  background-color: #6e8091;
+  color: white;
 }
 
 td {
